fixed footer vertical alignment

--- a/web_static/styles/2-footer.css
+++ b/web_static/styles/2-footer.css
@@ -3,7 +3,9 @@ footer
     background-color: #00FF00;
     height: 60px;
     width: 100%;
-    text-align: center;
     position: absolute;
-    bottom: 0;
+    bottom: 0px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
